# zkp-chaum-pedersen

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  auth_client.cpp  auth_server.cpp  auth_server.hpp  auth_service_impl.cpp  auth_service_impl.hpp  chaum_pedersen.hpp  chaum_pedersen_test.cpp  main.cpp  vcpkg.json  zkp_constants.hpp
protos/: zkp_auth.proto
